[project]
name = "epoikos-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.4.9.3",
    "autogen-ext[openai]>=0.4.9.3",
    "fastapi[standard]>=0.115.12",
    "faststream[nats]>=0.5.37",
    "langfuse>=2.60.3",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pathfind>=0.1.2",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.1",
    "pymilvus>=2.5.6",
    "tinydb>=4.8.2",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
]
