[project]
name = "epoikos-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.4.9.3",
    "autogen-ext[openai]>=0.4.9.3",
    "fastapi[standard]>=0.115.12",
    "faststream[nats]>=0.5.37",
    "langfuse>=2.60.3",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pathfind>=0.1.2",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.1",
    "pymilvus>=2.5.6",
    "tinydb>=4.8.2",
    "neo4j>=5.28.1",
    "neomodel>=5.5.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.16.2",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
]
